--- a/app/styles/bootstrap-breakpoint.scss
+++ b/app/styles/bootstrap-breakpoint.scss
@@ -1,104 +1,74 @@
-@import url("../../node_modules/bootstrap/scss/bootstrap.scss");
+$danger: #ea3c13;
+$secondary: #737373;
 
-nav {
-  top: 0;
-  box-shadow: 0px 13px 24px 0px rgba(0, 0, 0, 0.08);
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
+$theme-colors: (
+  "danger": $danger,
+  "secondary": $secondary,
+);
 
-nav .navbar-collapse.collapse {
-  display: block;
-}
+$spacer: 1rem;
+$spacers: (
+  0: 0,
+  1: $spacer * 0.25,
+  2: $spacer * 0.75,
+  3: $spacer,
+  4: $spacer * 1.5,
+  5: $spacer * 3,
+);
+$custom-spacers: (
+  6: $spacer * 3.5,
+  7: $spacer * 4,
+  8: $spacer * 4.5,
+  9: $spacer * 5,
+  10: $spacer * 8,
+  11: $spacer * 8.5,
+  12: $spacer * 9.5,
+  13: $spacer * 16,
+);
 
-@media (max-width: 991px) {
-  nav .navbar-collapse.collapse {
-    overflow: hidden;
-  }
-  nav .navbar-collapse.active {
-    height: 100vh !important;
-  }
-}
+$font-size-base: 1rem; // typically `16px`
+$font-sizes: (
+  1: $font-size-base * 2.5,
+  2: $font-size-base * 2,
+  3: $font-size-base * 1.75,
+  4: $font-size-base * 1.5,
+  5: $font-size-base * 1.25,
+  6: $font-size-base,
+);
+$custom-font-sizes: (
+  0: $font-size-base * 4,
+);
 
-nav .navbar-collapse {
-  transition: 0.6s all ease-in-out;
-  height: 0 !important;
-}
+$spacers: map-merge($spacers, $custom-spacers);
+$font-sizes: map-merge($font-sizes, $custom-font-sizes);
 
-nav .nav-underline:hover {
-  /* display: none; */
-}
-
-nav .navbar-toggler:focus,
-.navbar-toggler:active,
-.navbar-toggler-icon:focus {
-  outline: none;
-  box-shadow: none;
-}
-
-.ms-4rem {
-  margin-left: 4rem;
-}
-
-.me-4rem {
-  margin-right: 4rem;
-}
-
-.mx-4rem {
-  margin-left: 4rem;
-  margin-right: 4rem;
-}
-
-.mx-5rem {
-  margin-left: 5rem;
-  margin-right: 5rem;
-}
-
-.ms-md-15rem {
-  margin-left: 15rem; /* 255px divided by 16px (root font size) */
-}
-
-.me-15rem {
-  margin-right: 15rem; /* 255px divided by 16px (root font size) */
-}
-
-.mt-8rem {
-  margin-top: 8rem;
-}
-
-.mt-13rem {
-  margin-top: 13rem;
-}
-.pb-13rem {
-  padding-bottom: 13rem;
-}
-
-.btn-danger {
-  background-color: #ff4136;
-}
-
-.fs-7 {
-  font-size: 4rem; /* 4rem is equivalent to 64px */
-}
-
-.w-65 {
-  max-width: 810px;
+.navbar {
   width: 100%;
+
+  .navbar-nav {
+    @media (max-width: 64em) {
+      gap: 0rem !important;
+    }
+  }
+  .navbar-toggler {
+    cursor: pointer;
+    outline: 0;
+  }
+
+  .nav-item {
+    padding: 0 1rem;
+
+    @media (max-width: 34em) {
+      padding: 0;
+    }
+  }
 }
 
-.text-overlay {
-  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Optional text shadow for contrast */
-  top: 206px;
-}
-
-.input-group .btn + .btn {
-  margin-left: -1px;
-  border-top-left-radius: 0;
-  border-bottom-left-radius: 0;
-}
-.option-icon {
-  margin-right: 5px;
-}
+@import "../../node_modules/bootstrap/scss/bootstrap";
+@import "../../node_modules/bootstrap/scss/functions";
+@import "../../node_modules/bootstrap/scss/variables";
+@import "../../node_modules/bootstrap/scss/utilities";
+@import "../../node_modules/bootstrap/scss/mixins";
 
 .dropdown-toggle::after {
   display: none;
@@ -117,32 +87,15 @@ nav .navbar-toggler:focus,
   background: transparent;
 }
 
-.rounded-right {
-  border-top-right-radius: 0 !important;
-  border-bottom-right-radius: 0 !important;
-}
+// .rounded-right {
+//   border-top-right-radius: 0 !important;
+//   border-bottom-right-radius: 0 !important;
+// }
 
-.rounded-left {
-  border-top-left-radius: 0 !important;
-  border-bottom-left-radius: 0 !important;
-}
-.border-gray {
-  border-color: #f4f4f4 !important;
-}
-.pagination a {
-  margin-right: 10px;
-  text-decoration: none;
-  color: #007bff;
-}
-.start-255 {
-  left: 0px;
-}
-.top-100 {
-  top: 0px;
-}
-
-.bottom-left {
-  position: absolute;
-  top: 206px;
-  left: 255px;
-}
+// .rounded-left {
+//   border-top-left-radius: 0 !important;
+//   border-bottom-left-radius: 0 !important;
+// }
+// .border-gray {
+//   border-color: #f4f4f4 !important;
+// }
